# lcl-agv-control

./: .gitignore  README.md
Arduino/imu_testing/: imu_testing.ino
Arduino/ros_arduino_bridge (Due)/: README.md
Arduino/ros_arduino_bridge (Due)/ROSArduinoBridge/: ROSArduinoBridge.ino  commands.h  encoder_driver.h  encoder_driver.ino  motor_driver.h  motor_driver.ino  pid_controller.h
Solidworks_URDF_Export/: README.md
Solidworks_URDF_Export/agv_bosch_v13_urdf_v5/: CMakeLists.txt  package.xml
Solidworks_URDF_Export/agv_bosch_v13_urdf_v5/config/: joint_names_agv_bosch_v13_urdf_v5.yaml
Solidworks_URDF_Export/agv_bosch_v13_urdf_v5/launch/: display.launch  gazebo.launch
Solidworks_URDF_Export/agv_bosch_v13_urdf_v5/meshes/: back_left.STL  bl_r10.STL  bl_r11.STL  bl_r5.STL  bl_r6.STL  bl_r7.STL  bl_r8.STL  br_r10.STL  br_r6.STL  br_r8.STL  fl_r11.STL  fl_r2.STL  fl_r3.STL  fl_r5.STL  fl_r6.STL  fl_r7.STL  fl_r8.STL  fr_r1.STL  fr_r10.STL  fr_r11.STL  fr_r12.STL  fr_r3.STL  fr_r5.STL  fr_r6.STL  front_left.STL
Solidworks_URDF_Export/agv_bosch_v13_urdf_v5/urdf/: agv_bosch_v13_urdf_v5.csv  agv_bosch_v13_urdf_v5.urdf
media/: .$electrical_architecture_22_10_2023.drawio.bkp  electrical_architecture_22_10_2023.drawio
ros2_ws/.qtc_clangd/: compile_commands.json
ros2_ws/.qtc_clangd/.cache/clangd/index/: Cdr.h.480DEC2B40CB2953.idx  Exception.h.3B7D4F229AB15E12.idx  FastBuffer.h.3817B6E883130E87.idx  NotEnoughMemoryException.h.FF5BD1D0DA8D31DB.idx  Python.h.45B3C8426FA02F13.idx  QQuickView.72D3F041D575BAF5.idx  QQuickWidget.B5AB9F7153F2EB49.idx  SerialPort.h.DBCAC3F78FA6AE14.idx  SerialPortConstants.h.251435429F8FDC13.idx  __multiarray_api.h.DD8465DFB67F7C51.idx  __stddef_max_align_t.h.2576E4C32D166D49.idx  _agv_custom_msgs_s.ep.rosidl_typesupport_c.c.E62FF4CCCEE53478.idx  _agv_custom_msgs_s.ep.rosidl_typesupport_fastrtps_c.c.968EAA22C8212689.idx  _agv_custom_msgs_s.ep.rosidl_typesupport_introspection_c.c.92DD6A7938AE8C21.idx  _agv_encoder_values_s.c.D08A8A7CA73E7F73.idx  _agv_motor_command_s.c.82749CC4B46ECEC9.idx  _agv_motor_velocities_s.c.9A4A3D6E1F522887.idx  _agv_single_wheel_ctrl_s.c.D94D5916FF62E63A.idx  _encoder_vals_s.c.DFCF765F02E30ADB.idx  _motor_command_s.c.A1B63CBB877F93F1.idx  _motor_vels_s.c.DEC350CB39CC137B.idx  _numpyconfig.h.2CF6C14A432B9EC2.idx  (+875 more)
ros2_ws/src/.devcontainer/: Dockerfile  bashrc  devcontainer.json
ros2_ws/src/agv_custom_msgs/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/agv_custom_msgs/msg/: AGVSingleWheelCtrl.msg
ros2_ws/src/lcl_agv_pkg/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/lcl_agv_pkg/config/: amcl_nav.rviz  ekf.yaml  hardware_deployment.rviz  lcl_agv_pkg.rviz  mapper_params_online_async.yaml  my_controllers.yaml  nav2_params.yaml  twist_mux.yaml
ros2_ws/src/lcl_agv_pkg/description/: agv_body.xacro  agv_body_original.xacro  gazebo_control.xacro  imu.xacro  inertial_macros.xacro  lidar.xacro  robot.urdf.xacro  ros2_control.xacro
ros2_ws/src/lcl_agv_pkg/launch/: hardware_amcl_nav.launch.py  hardware_slam.launch.py  localization_launch.py  navigation_launch.py  rviz_spawn.launch.py  simulation_amcl_nav.launch.py  simulation_slam.launch.py
ros2_ws/src/lcl_agv_pkg/lcl_agv_pkg/: encoder_driver.py  imu_driver.py  mecanum_driver.py
ros2_ws/src/lcl_agv_pkg/maps/: slam_map.pgm  slam_map.yaml  slam_map_lab.pgm  slam_map_lab.yaml
ros2_ws/src/lcl_agv_pkg/meshes/: back_right.STL  bl_r1.STL  bl_r12.STL  bl_r2.STL  bl_r3.STL  bl_r4.STL  bl_r9.STL  br_r1.STL  br_r11.STL  br_r12.STL  br_r2.STL  br_r3.STL  br_r4.STL  br_r5.STL  br_r7.STL  br_r9.STL  chassis.STL  fl_r1.STL  fl_r10.STL  fl_r12.STL  fl_r4.STL  fl_r9.STL  fr_r2.STL  fr_r4.STL  fr_r7.STL  fr_r8.STL  fr_r9.STL  front_right.STL
ros2_ws/src/lcl_agv_pkg/worlds/: warehouse.world
ros2_ws/src/mecanumdrive_arduino/: CMakeLists.txt  README.md  mecanumdrive_arduino.xml  package.xml
ros2_ws/src/mecanumdrive_arduino/hardware/: mecanumbot_system.cpp
ros2_ws/src/mecanumdrive_arduino/hardware/include/mecanumdrive_arduino/: arduino_comms.hpp  imu.hpp  mecanumbot_system.hpp  visibility_control.h  wheel.hpp
ros2_ws/src/sllidar_ros2/launch/: sllidar_a2m8_launch.py
ros2_ws/src/ui_package/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/ui_package/ui_package/: ui_node.py
