<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lcl_agv_pkg</name>
  <version>0.1.0</version>
  <description>main package for AGV</description>
  <maintainer email="xun.pua@tum.de">Xun Pua</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>

  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>xacro</exec_depend>
  <!-- <exec_depend>ros_gz_sim</exec_depend> -->
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>ui_package</exec_depend>
  <exec_depend>agv_custom_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
